working polling address read

--- a/nucleo_apps/ledblinky/Makefile
+++ b/nucleo_apps/ledblinky/Makefile
@@ -1,4 +1,5 @@
 NAME := ledblinky
-LOCAL_SRCS := ledblinky.c
+LOCAL_SRCS := ledblinky.c ../gpiocontrol/gpiocontrol.c
+LOCAL_HEADERS := ../gpiocontrol/gpiocontrol.h
 
 include $(binary.mk)
