--- a/.github/workflows/ci_night.yml
+++ b/.github/workflows/ci_night.yml
@@ -1,9 +1,11 @@
+# vim:sw=2:ts=2
 name: ci_night
 
 # on events
 on:
   schedule:
-    - cron: '27/15 12 * * 1-5'
+    # triggered every day 5:00 UTC
+    - cron: '0 5 * * *'
 
 # jobs
 jobs:
@@ -14,7 +16,7 @@ jobs:
       build_result: ${{ steps.build.outcome }}
     strategy:
       matrix:
-        target: ['host-pc', 'ia32-generic'] #'armv7a7-imx6ull', 'armv7a9-zynq7000', 'armv7m7-imxrt106x', 'armv7m7-imxrt117x', 'armv7m4-stm32l4x6', 'host-pc', 'ia32-generic', 'riscv64-spike', 'riscv64-virt']
+        target: ['armv7a7-imx6ull', 'armv7a9-zynq7000', 'armv7m7-imxrt106x', 'armv7m7-imxrt117x', 'armv7m4-stm32l4x6', 'host-pc', 'ia32-generic', 'riscv64-spike', 'riscv64-virt']
         include:
           - target: 'ia32-generic'
             syspage: 'psh pc-ata uart16550'
@@ -83,4 +85,60 @@ jobs:
         uses: ./.github/actions/phoenix-runner
         with:
           target: ${{ matrix.target }}
-          long_test: ' --long-test'
+          long_test: 'True'
+
+  test-hw:
+    needs: build
+    name: run tests on hardware
+    runs-on: ${{ matrix.target }}
+    outputs:
+      runner_result: ${{ steps.runner.outcome }}
+    strategy:
+      matrix:
+        target: ['armv7m7-imxrt106x']
+
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: phoenix-rtos-${{ matrix.target }}
+
+      - name: Untar rootfs
+        working-directory: _fs
+        run: tar -xvf ../rootfs-${{ matrix.target }}.tar
+
+      - name: Test runner
+        id: runner
+        run: |
+          python3 ./phoenix-rtos-tests/runner.py -T${{ matrix.target }}
+
+  mail-notification:
+    if: ${{ failure() }}
+    needs: ['build', 'test-emu', 'test-hw']
+    name: notify ci team using e-mail
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send mail
+        # If there is some failure, not caused by build step or test runner step send mail
+        if: >-
+          ${{ needs.build.outputs.build_result != 'failure'
+          && needs.test-emu.outputs.runner_result != 'failure'
+          && needs.test-hw.outputs.runner_result != 'failure' }}
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.CI_BOT_EMAIL_USERNAME }}
+          password: ${{ secrets.CI_BOT_EMAIL_PASSWORD }}
+          subject: Github Actions Warning
+          to: ci@phoenix-rtos.com
+          # Required sender full name (address can be skipped):
+          from: Continuous Integration Bot
+          # Optional whether this connection use TLS (default is true if server_port is 465)
+          secure: true
+          body: There is some problem with GH Actions. https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
