--- a/.github/actions/phoenix-runner/action.yml
+++ b/.github/actions/phoenix-runner/action.yml
@@ -12,7 +12,7 @@ inputs:
     required: false
   long_test:
     description: 'If specified long tests are run too'
-    default: 'False'
+    default: ''
     required: false
 
 # action runner
