activate night tests workflow
DONE: PD-230

--- a/.github/actions/phoenix-runner/action.yml
+++ b/.github/actions/phoenix-runner/action.yml
@@ -11,6 +11,11 @@ inputs:
     default: 'ia32-generic'
     required: false
 
+  long_test:
+    description: 'If specified long tests are run too'
+    default: ''
+    required: false
+
 
 # action runner
 runs:
@@ -19,7 +24,10 @@ runs:
   entrypoint: ./phoenix-rtos-tests/runner.py
   args:
     - '-T${{ inputs.target }}'
-
+    # "--long-test" "True" enables long tests
+    # "--long-test" "" disables long tests - default
+    - '--long-test' 
+    - '${{ inputs.long_test }}'
 
 # branding
 branding:
