working running led_on program from syspage

--- a/_user/hello/Makefile
+++ b/_user/hello/Makefile
@@ -4,7 +4,9 @@
 # Copyright 2021 Phoenix Systems
 #
 
-NAME := hello
+NAME := led_on
 LOCAL_SRCS := main.c
+
+CFLAGS += -O0 -g3 -ggdb #DEBUG CFLAGS
 
 include $(binary.mk)
