--- a/_user/rotrectangle/Makefile
+++ b/_user/rotrectangle/Makefile
@@ -4,8 +4,8 @@
 # Copyright 2021 Phoenix Systems
 #
 
-NAME := rotrectangle
-LOCAL_SRCS := main.c
-LIBS := libgraph libvga libvirtio
+# NAME := rotrectangle
+# LOCAL_SRCS := main.c
+# LIBS := libgraph libvga libvirtio
 
-include $(binary.mk)
+# include $(binary.mk)
